src/snapshots/merkle_search_tree__tree__tests__child_page_split_add_intermediate.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	page_2:E -> page_3:head;
	page_3 [shape=record, label="<head>Level 0|<D>·|D"]

	page_1:K -> page_2:head;
	page_2 [shape=record, label="<head>Level 1|<E>·|E"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 2|<K>·|K"]

}

