src/snapshots/merkle_search_tree__tree__tests__equal_page_move_all_nodes_and_high_page_subset.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 64|<00000000000000000000000000000000>·|00000000000000000000000000000000|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 52|<00000000000000000000000000111111>·|00000000000000000000000000111111|<high_page>·"]
	page_2:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 20|<00000000001111111111111111111111>·|00000000001111111111111111111111"]

}

