src/snapshots/merkle_search_tree__tree__tests__greatest_key_splits_high_page.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 2|<01111111111111111111111111111111>·|01111111111111111111111111111111|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 1|<2401111111111111111111111111111111>·|2401111111111111111111111111111111"]

}

