src/snapshots/merkle_search_tree__tree__tests__non_root_page_split_lt.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 6|<00011111111111111111111111111111>·|00011111111111111111111111111111|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 4|<00111111111111111111111111111111>·|00111111111111111111111111111111|<high_page>·"]
	page_2:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 2|<01111111111111111111111111111111>·|01111111111111111111111111111111"]

}

