src/snapshots/merkle_search_tree__tree__tests__one.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 0|<11111111111111111111111111111111>·|11111111111111111111111111111111"]

}

