src/snapshots/merkle_search_tree__tree__tests__root_split_page_gt.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	page_1:B -> page_2:head;
	page_2 [shape=record, label="<head>Level 0|<A>·|A"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 1|<B>·|B"]

}

