src/snapshots/merkle_search_tree__tree__tests__root_split_page_lt.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 1|<A>·|A|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 0|<B>·|B"]

}

